格式化目录

--- a/views/login.html
+++ b/views/login.html
@@ -1,9 +1,10 @@
-{% extends 'layout.html' %}
+{% extends '../layout/layout.html' %}
 {% block title %} {{title}} {% endblock%}
 {% block content %}
 <style>
     #app{
         width: 1140px;
+        margin: 0 auto;
     }
     .el-header{
         text-align: center;
