--- a/views/addFood.html
+++ b/views/addFood.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends '../layout/layout.html' %}
 {% block title %} {{title}} {% endblock%}
 {% block content %}
 <style>
