--- a/views/login.html
+++ b/views/login.html
@@ -45,6 +45,9 @@
                 password:""
             }
         },
+        created(){
+            this.ws()
+        },
         methods: {
             onSubmit: function(){
                 axios.post("/api/login",{
